# airflow-jobs

./: .gitignore  README.md  pyproject.toml
config/: install-script.sh
config/services/: airflow-scheduler.service  airflow-trigger.service  airflow.service
jobs/: baseball_schedule_dag.py  baseball_stats_dag.py  cfb_schedule_dag.py  cfb_stats_dag.py  factories.py  hello_dag.py  helpers.py  nfl_schedule_dag.py  nfl_stats_dag.py  wbb_schedule_dag.py  wbb_stats_dag.py  wbb_stats_job.py  wnba_schedule_dag.py  wnba_stats_dag.py
